# call_me_maybe

./: .gitignore  Makefile  pyproject.toml
src/: __main__.py
src/adapter/: __init__.py  adapter.py  adapter_factory.py
src/generate/: __init__.py  generator.py  generator_factory.py
src/io/: adapter.py
src/models/: __init__.py  arguments.py  function.py
src/parsing/: __argument_parser.py  __init__.py  parser.py  parser_factory.py
src/schema/: __init__.py  schema.py  schema_factory.py
src/state/: __init__.py  state.py  state_factory.py
src/tokenize/: __custom_tokenizer.py  __init__.py  __sdk_tokenizer.py  tokenizer.py  tokenizer_factory.py
src/trie/: __init__.py  node.py  trie.py
