[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Generating perfect function calling json using constraint decoding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm-sdk",
    "numpy<=2.4.6",
    "pydantic>=2.13.4",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true, editable = true }
